adding more posters

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="preload" href="./images/streamingServices/netflixLogo.jpeg" as="image">
+    <link rel="preload" href="./images/streamingServices/maxLogo.webp" as="image">
+    <link rel="preload" href="./images/streamingServices/appleLogo.png" as="image">
+    <link rel="preload" href="./images/streamingServices/criterionLogo.webp" as="image">
+    <link rel="preload" href="./images/streamingServices/disneyLogo.jpeg" as="image">
+    <link rel="preload" href="./images/streamingServices/huluLogo.jpg" as="image">
+    <link rel="preload" href="./images/streamingServices/paramountLogo.jpg" as="image">
+    <link rel="preload" href="./images/streamingServices/peacockLogo.avif" as="image">
+    <link rel="preload" href="./images/streamingServices/primeLogo.webp" as="image">
+    <link rel="preload" href="./images/streamingServices/tubiLogo.jpg" as="image">
     <link rel="icon" type="image/svg+xml" href="https://www.shutterstock.com/image-vector/3d-modern-objects-watching-video-260nw-2259143287.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Choose a movie, already!</title>
