preloading a bunch of images, let's see what happens

--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
     <link rel="preload" href="./images/streamingServices/peacockLogo.avif" as="image">
     <link rel="preload" href="./images/streamingServices/primeLogo.webp" as="image">
     <link rel="preload" href="./images/streamingServices/tubiLogo.jpg" as="image">
+    <link rel="preload" href="./directors/AkiraKurosawa.png" as="image">
+    <link rel="preload" href="./directors/AriAster.webp" as="image">
+    <link rel="preload" href="./directors/BongJoonHo.webp" as="image">
+    <link rel="preload" href="./directors/CharlieChaplin.jpg" as="image">
+    <link rel="preload" href="./directors/ChrisAddison.jpg" as="image">
+    <link rel="preload" href="./directors/ChristopherNolan.jpg" as="image">
+    <link rel="preload" href="./directors/ClintEastwood.png" as="image">
+    <link rel="preload" href="./directors/DavidFincher.webp" as="image">
+    <link rel="preload" href="./directors/DavidLynch.jpg" as="image">
+    <link rel="preload" href="./directors/JJAbrams.webp" as="image">
+    <link rel="preload" href="./directors/JoelCoen.jpg" as="image">
+    <link rel="preload" href="./directors/JohnFord.jpg" as="image">
+    <link rel="preload" href="./directors/JonathanGlazer.avif" as="image">
+    <link rel="preload" href="./directors/JuddApatow.webp" as="image">
+    <link rel="preload" href="./directors/LennyAbrahamson.jpg" as="image">
+    <link rel="preload" href="./directors/PaulThomasAnderson.webp" as="image">
+    <link rel="preload" href="./directors/QuentinTarantino.jpeg" as="image">
+    <link rel="preload" href="./directors/StanleyKubrick.webp" as="image">
+    <link rel="preload" href="./directors/StevenSpielberg.jpg" as="image">
+    <link rel="preload" href="./directors/WoodyAllen.webp" as="image">
+
+    
     <link rel="icon" type="image/svg+xml" href="https://www.shutterstock.com/image-vector/3d-modern-objects-watching-video-260nw-2259143287.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Choose a movie, already!</title>
