pre loading more images

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     <link rel="preload" href="./directors/StanleyKubrick.webp" as="image">
     <link rel="preload" href="./directors/StevenSpielberg.jpg" as="image">
     <link rel="preload" href="./directors/WoodyAllen.webp" as="image">
+    <link rel="preload" href="./directors/NimrodAntal.jpg" as="image">
+    <link rel="preload" href="./directors/MartinScorcese.jpeg" as="image">
+    <link rel="preload" href="./directors/KentAlterman.webp" as="image">
+
+
 
     
     <link rel="icon" type="image/svg+xml" href="https://www.shutterstock.com/image-vector/3d-modern-objects-watching-video-260nw-2259143287.jpg" />
