okay, this seems to be loading the images the way I want finally

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preload" href="./images/streamingServices/peacockLogo.avif" as="image">
     <link rel="preload" href="./images/streamingServices/primeLogo.webp" as="image">
     <link rel="preload" href="./images/streamingServices/tubiLogo.jpg" as="image">
+    <link rel="preload" href="./loadingImage.jpg" as="image">
     
     <link rel="preload" href="./directors/AriAster.webp" as="image">
  
